--- a/Cdw.Application/App.config
+++ b/Cdw.Application/App.config
@@ -7,12 +7,12 @@
         <bindings>
             <wsHttpBinding>
                 <binding name="WSHttpBinding_IService">
-                    <security mode="None" />
+                    <security mode="Transport" />
                 </binding>
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost/Cdw.Service/Service.svc"
+            <endpoint address="http://localhost:62427/Service.svc"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IService"
                 contract="WCFService.IService" name="WSHttpBinding_IService" />
         </client>
