--- a/Cdw.Service/Web.config
+++ b/Cdw.Service/Web.config
@@ -14,7 +14,7 @@
     <bindings>
       <wsHttpBinding>
         <binding name="soap">
-          <security mode="Transport">
+          <security mode="None">
             <transport clientCredentialType="None"/>
           </security>
         </binding>
@@ -36,7 +36,7 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https"/>
+      <add binding="basicHttpsBinding" scheme="http"/>
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
@@ -51,10 +51,10 @@
   <applicationSettings>
     <Cdw.Service.Properties.Settings>
       <setting name="ADDomain" serializeAs="String">
-        <value></value>
+        <value>DOMAIN</value>
       </setting>
       <setting name="ADDomainController" serializeAs="String">
-        <value></value>
+        <value>DOMAINCONTROLLER</value>
       </setting>
       <setting name="ForceGeneratedComputerNames" serializeAs="String">
         <value>False</value>
